[package]
name = "nginx-logs-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.25", features = ["zlib-ng"], default-features = false }
time = { version = "0.3.17", features = ["formatting", "macros"] }
